// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceDetails /> renders device with metadata 1`] = `
<div>
  <div
    class="mx_DeviceDetails"
  >
    <section
      class="mx_DeviceDetails_section"
    >
      <h3
        class="mx_Heading_h3"
      >
        My Device
      </h3>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <p
        class="mx_DeviceDetails_sectionHeading"
      >
        Session details
      </p>
      <table
        class="mxDeviceDetails_metadataTable"
      >
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Session ID
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              my-device
            </td>
          </tr>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Last activity
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              Sun 22:34
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="mxDeviceDetails_metadataTable"
      >
        <thead>
          <tr>
            <th>
              Device
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              IP address
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              123.456.789
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`<DeviceDetails /> renders device without metadata 1`] = `
<div>
  <div
    class="mx_DeviceDetails"
  >
    <section
      class="mx_DeviceDetails_section"
    >
      <h3
        class="mx_Heading_h3"
      >
        my-device
      </h3>
    </section>
    <section
      class="mx_DeviceDetails_section"
    >
      <p
        class="mx_DeviceDetails_sectionHeading"
      >
        Session details
      </p>
      <table
        class="mxDeviceDetails_metadataTable"
      >
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Session ID
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            >
              my-device
            </td>
          </tr>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              Last activity
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            />
          </tr>
        </tbody>
      </table>
      <table
        class="mxDeviceDetails_metadataTable"
      >
        <thead>
          <tr>
            <th>
              Device
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="mxDeviceDetails_metadataLabel"
            >
              IP address
            </td>
            <td
              class="mxDeviceDetails_metadataValue"
            />
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;
